--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ ol {
   padding-bottom: 50px;
   margin-bottom: 30px;
 }
+.rodape{
+  padding: 30px;
+  text-align: center;
+}
 @media (max-width: 800px) {
   .fundo-beje,
   .foto {
